--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-# ignore configuration files
-**/config.xsl
-**/*.yml
+# ignore config files
+config.yml
+private.yml
 
-# but don't ignore example config files
-!**/*.example.yml
+# There might be a better way of doing this, but something about
+# gitignoring inside an ignored subdirectory seems to be more finicky than normal
 
-# Ignore ds_store files
+**/es/*
+**/html-generated/*
+**/solr/*
+
+!**/.keep
+
 .DS_Store
-
-# Ignore html-generated files but keep directory
-html-generated/**
-!html-generated/.keep
