--- a/config/public.yml
+++ b/config/public.yml
@@ -9,35 +9,17 @@ default:
   tei_solr_xsl: collections/oscys/scripts/solr_transform_tei.xsl
   tei_html_xsl: collections/oscys/scripts/tei.p5.xsl
 
+  data_base: https://cdrhmedia.unl.edu
+  media_base: https://cdrhmedia.unl.edu
+  variables_html:
+    image_large: 1500
+    image_thumb: 150
+    slug: oscys
+  variables_solr:
+    site_location: http://earlywashingtondc.org
+
 development:
-  variables_solr:
-    slug: oscys
-    # project: "O Say Can You See"
-    fig_location: http://earlywashingtondc.org/figures/
-    file_location: https://cdrhdev1.unl.edu/data/collections/
-  variables_html:
-    slug: oscys
-    fig_location: http://earlywashingtondc.org/figures/
-    file_location: https://cdrhdev1.unl.edu/data/collections/
- 
-production:
-  variables_solr:
-    slug: oscys
-    # project: "O Say Can You See"
-    fig_location: http://earlywashingtondc.org/figures/
-    file_location: http://earlywashingtondc.org/files/
-  variables_html:
-    slug: oscys
-    fig_location: http://earlywashingtondc.org/figures/
-    file_location: http://earlywashingtondc.org/files/
+  data_base: https://cdrhdev1.unl.edu/media
 
 production_emergency:
   solr_core: api_oscys_emergency
-  variables_solr:
-    slug: oscys
-    fig_location: http://earlywashingtondc.org/figures/
-    file_location: http://earlywashingtondc.org/files/
-  variables_html:
-    slug: oscys
-    fig_location: http://earlywashingtondc.org/figures/
-    file_location: http://earlywashingtondc.org/files/
