updating datura and nokogiri

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ config/private.yml
 # increase specificity of this path if you wish to only track generated html
 !/output/production/
 !/output/development/html
+
+# we don't know why stuff is getting copied in here
+/collections/*
