--- a/config/public.yml
+++ b/config/public.yml
@@ -7,7 +7,8 @@ default:
   solr_core: api_oscys
   tei_solr_xsl: scripts/overrides/tei_to_solr.xsl
   tei_html_xsl: scripts/overrides/tei_to_html.xsl
-  threads: 20
+  # Must stay one thread to correctly process data
+  threads: 1
 
   data_base: https://cdrhmedia.unl.edu
   media_base: https://cdrhmedia.unl.edu
@@ -16,17 +17,17 @@ default:
     image_thumb: 150
     slug: oscys
   variables_solr:
-    site_location: http://earlywashingtondc.org
+    site_location: https://earlywashingtondc.org
 
 development:
-  data_base: https://cdrhdev1.unl.edu/media
-  solr_path: https://cdrhdev1.unl.edu/solr
-  es_path: https://cdrhdev1.unl.edu/elastic
+  data_base: https://server.unl.edu/media
+  solr_path: https://server.unl.edu/solr
+  es_path: https://server.unl.edu/elastic
   es_index: cdrhapidev-v1
 
 production:
-  solr_path: https://cors1601.unl.edu/solr
+  solr_path: https://server.unl.edu/solr
 
 production_emergency:
   solr_core: api_oscys_emergency
-  solr_path: https://cors1601.unl.edu/solr
+  solr_path: https://server.unl.edu/solr
